tests/baselines/reference/propertyOrdering.errors.txt
==== tests/cases/compiler/propertyOrdering.ts (4 errors) ====
    class Foo {
        constructor(store: string) { }
          public foo() {
                return this._store.length;   // shouldn't be an error
          }
          public _store = store; // no repro if this is first line in class body
                          ~~~~~
!!! error TS2095: Could not find symbol 'store'.
    
    
          public bar() { return this.store; } // should be an error
                                     ~~~~~
!!! error TS2094: The property 'store' does not exist on value of type 'Foo'.
    
    }
    
    class Bar {
          public foo() {
    
                return this._store.length;   // shouldn't be an error
                            ~~~~~~
!!! error TS2094: The property '_store' does not exist on value of type 'Bar'.
    
          }
        constructor(store: string) {
            this._store = store;
                 ~~~~~~
!!! error TS2094: The property '_store' does not exist on value of type 'Bar'.
        }
    }
    